--- a/navigazione.html
+++ b/navigazione.html
@@ -42,7 +42,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #ffffff;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -54,17 +54,17 @@
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: white;
+  background-color: rgb(70,0,218);
   -webkit-transition: .4s;
   transition: .4s;
 }
 
 input:checked + .slider {
-  background-color: #c9c9c9;
+  background-color: rgb(33, 37, 41);
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #c9c9c9;
+  box-shadow: 0 0 1px #ffffff;
 }
 
 input:checked + .slider:before {
